--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -31,6 +31,9 @@
     &__main {
         background: $col__header__pre--bg;
 
+        .grid {
+            margin-top: 0;
+        }
         &--nav {
             margin: 0 -#{$gap--xs};
         }
